--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ FLASK_APP=run.py
 FLASK_ENV=development
 SECRET_KEY=your-secret-key-here
 FLASK_DEBUG=1
-PYTHONPATH=${PYTHONPATH}:/Users/van/IdeaProjects/psychology
+PYTHONPATH=${PYTHONPATH}:.
